# basicChessEngine

./: CMakeLists.txt  README.md
include/: Board.h  GameEngine.h  Piece.h  Square.h
libs/: Board.cpp  GameEngine.cpp  Piece.cpp  Square.cpp
src/: Board.cpp  Piece.cpp
ut/: BoardTests.cpp  GameEngineTests.cpp  unit_tests.cpp
